# tolly

./: .gitignore  CMakeLists.txt  README  Ternice.cbp  tolly.cbp  tolly.layout
base/: hexstring.hpp
docs/: Overview.md
log/: logger.hpp
src/: CMakeLists.txt  test.cpp  wordcount.cc
src/base/: hexstring.hpp
src/lib/: libhadoop.so.1.0.0  libhdfs.so.0.0.0
src/type/: table.hpp
test/: test.cpp  tolly
type/: table.hpp
