project(tolly)
cmake_minimum_required (VERSION 2.8)
ADD_SUBDIRECTORY(src bin)
#SET (CMAKE_C_FLAGS_INIT                "-Wall -std=c99")
#SET (CMAKE_C_FLAGS_DEBUG_INIT          "-g")
#SET (CMAKE_C_FLAGS_MINSIZEREL_INIT     "-Os -DNDEBUG")
#SET (CMAKE_C_FLAGS_RELEASE_INIT        "-O4 -DNDEBUG")
#SET (CMAKE_C_FLAGS_RELWITHDEBINFO_INIT "-O2 -g")

SET(CMAKE_INSTALL_PREFIX /usr/local)
INSTALL(PROGRAMS tolly.sh DESTINATION bin)
INSTALL(FILES COPYRIGHT README DESTINATION share/doc/tolly)
INSTALL(DIRECTORY doc/ DESTINATION share/doc/tolly)
